<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_wrong"
        android:contentDescription="@string/no_connect" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/no_connect"
        android:textSize="17sp"
        android:textColor="@color/text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:paddingBottom="10sp"
        android:text="@string/no_internet"
        android:textSize="14sp"
        android:textColor="@color/primary_dark" />

    <Button
        android:id="@+id/button_back"
        android:onClick="onBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="@color/primary"
        android:padding="10sp"
        android:text="@string/button_back"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:textColor="@color/text_color_white" />

</LinearLayout>