<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adViewMenuActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ECEFF1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15sp"
                android:background="#B0BEC5"
                android:text="@string/menu_description"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#CFD8DC" />

            <CheckBox
                android:id="@+id/checkBoxCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:paddingRight="15sp"
                android:paddingEnd="15sp"
                android:paddingLeft="15sp"
                android:text="@string/checkbox_cancel"
                android:textSize="17sp"
                android:textColor="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#CFD8DC" />

            <CheckBox
                android:id="@+id/checkBoxSell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:paddingRight="15sp"
                android:paddingEnd="15sp"
                android:paddingLeft="15sp"
                android:text="@string/checkbox_sell"
                android:textSize="17sp"
                android:textColor="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#CFD8DC" />

            <CheckBox
                android:id="@+id/checkBoxCancelLoad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:paddingRight="15sp"
                android:paddingEnd="15sp"
                android:paddingLeft="15sp"
                android:text="@string/checkbox_cancel_load"
                android:textSize="17sp"
                android:textColor="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#CFD8DC" />

            <CheckBox
                android:id="@+id/checkBoxDefaultStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:paddingTop="15sp"
                android:paddingBottom="15sp"
                android:paddingRight="15sp"
                android:paddingEnd="15sp"
                android:paddingLeft="15sp"
                android:text="@string/checkbox_station_default"
                android:textSize="17sp"
                android:textColor="#000" />

            <com.www.avtovokzal.org.CustomAutoCompleteView
                android:id="@+id/autoCompleteMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_marginEnd="15sp"
                android:nextFocusUp="@id/autoCompleteMenu"
                android:nextFocusLeft="@id/autoCompleteMenu"
                android:drawableLeft="@drawable/ic_search"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="5sp"
                android:inputType="textNoSuggestions"
                android:hint="@string/hint_menu"
                android:textColorHint="#90A4AE"
                android:singleLine="true"
                android:ellipsize="end"
                android:lines="1"
                android:completionThreshold="1"
                android:textColor="#000"
                android:textSize="17sp" >
            </com.www.avtovokzal.org.CustomAutoCompleteView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:paddingRight="15sp"
                android:paddingEnd="15sp"
                android:paddingLeft="15sp"
                android:text="@string/menu_station"
                android:textSize="14sp"
                android:textColor="#000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="#CFD8DC" />

            <Button
                android:id="@+id/btnAdsDisable"
                android:onClick="btnAdsDisableOnClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_gravity="center"
                android:background="#607D8B"
                android:padding="10sp"
                android:text="@string/button_ads_disable"
                android:textSize="17sp"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/btnFeedback"
                android:onClick="btnFeedbackOnClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_gravity="center"
                android:background="#607D8B"
                android:padding="10sp"
                android:text="@string/button_feedback"
                android:textSize="17sp"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/btnAbout"
                android:onClick="btnAboutOnClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"
                android:layout_gravity="center"
                android:background="#607D8B"
                android:padding="10sp"
                android:text="@string/button_about"
                android:textSize="17sp"
                android:textColor="#FFF" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>