<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adViewArrivalActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1" >

        <com.www.avtovokzal.org.CustomAutoCompleteView
            android:id="@+id/autoCompleteArrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7sp"
            android:layout_margin="5sp"
            android:background="@drawable/shape"
            android:nextFocusUp="@id/autoCompleteArrival"
            android:nextFocusLeft="@id/autoCompleteArrival"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="5sp"
            android:inputType="textNoSuggestions"
            android:hint="@string/hint_arrival"
            android:textColorHint="@color/text_color_hint"
            android:completionThreshold="1"
            android:textColor="@color/text_color"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:background="@color/primary"
            android:text="@string/arrival_attention"
            android:textColor="@color/text_color_white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/noArrivalItems"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_items"
            android:textSize="17sp"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="25sp"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/listViewArrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:soundEffectsEnabled="true"
            android:divider="@color/divider_color"
            android:dividerHeight="1sp" />

    </LinearLayout>
</LinearLayout>