<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:id="@+id/listViewMainResultItem" >

    <TextView
        android:id="@+id/textViewMainResultTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMainResultNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewMainResultTime"
        android:layout_toRightOf="@+id/textViewMainResultTime"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewMainResultName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewMainResultNumber"
        android:layout_toRightOf="@+id/textViewMainResultNumber"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="17sp"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewMainResultTimePribDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultName"
        android:text="@string/time_prib"
        android:textSize="14sp"
        android:textColor="@color/text_color_hint" />

    <TextView
        android:id="@+id/textViewMainResultTimePrib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultName"
        android:layout_toEndOf="@+id/textViewMainResultTimePribDesc"
        android:layout_toRightOf="@+id/textViewMainResultTimePribDesc"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="14sp"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/textViewMainResultNameBusDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultTimePribDesc"
        android:text="@string/name_bus"
        android:textSize="14sp"
        android:textColor="@color/text_color_hint" />

    <TextView
        android:id="@+id/textViewMainResultNameBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultTimePribDesc"
        android:layout_toEndOf="@+id/textViewMainResultNameBusDesc"
        android:layout_toRightOf="@+id/textViewMainResultNameBusDesc"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="14sp"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewMainResultCountBusDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultNameBusDesc"
        android:text="@string/count_bus"
        android:textSize="14sp"
        android:textColor="@color/text_color_hint" />

    <TextView
        android:id="@+id/textViewMainResultCountBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultNameBusDesc"
        android:layout_toEndOf="@+id/textViewMainResultCountBusDesc"
        android:layout_toRightOf="@+id/textViewMainResultCountBusDesc"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="14sp"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewMainResultFreeBusDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultCountBusDesc"
        android:text="@string/free_bus"
        android:textSize="14sp"
        android:textColor="@color/text_color_hint" />

    <TextView
        android:id="@+id/textViewMainResultFreeBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultCountBusDesc"
        android:layout_toEndOf="@+id/textViewMainResultFreeBusDesc"
        android:layout_toRightOf="@+id/textViewMainResultFreeBusDesc"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="14sp"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewMainResultPriceBusDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultFreeBusDesc"
        android:text="@string/price_bus"
        android:textSize="14sp"
        android:textColor="@color/text_color_hint" />

    <TextView
        android:id="@+id/textViewMainResultPriceBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultFreeBusDesc"
        android:layout_toEndOf="@+id/textViewMainResultPriceBusDesc"
        android:layout_toRightOf="@+id/textViewMainResultPriceBusDesc"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="14sp"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewMainResultBaggageBusDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultPriceBusDesc"
        android:text="@string/baggage_bus"
        android:textSize="14sp"
        android:textColor="@color/text_color_hint" />

    <TextView
        android:id="@+id/textViewMainResultBaggageBus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMainResultPriceBusDesc"
        android:layout_toEndOf="@+id/textViewMainResultBaggageBusDesc"
        android:layout_toRightOf="@+id/textViewMainResultBaggageBusDesc"
        android:layout_marginStart="5sp"
        android:layout_marginLeft="5sp"
        android:textSize="14sp"
        android:textColor="@color/text_color" />

    <TextView
        android:id="@+id/textViewMainResultCancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textViewMainResultName"
        android:gravity="center"
        android:background="@color/divider_color"
        android:visibility="invisible"
        android:textSize="17sp"
        android:text="@string/cancel_bus" />

</RelativeLayout>